Add: "New Changes"

--- a/paginaHtml.html
+++ b/paginaHtml.html
@@ -67,6 +67,9 @@
                     <li>
                         <a href="#programa-radio">Programa de Radio</a>
                     </li>
+                    <li>
+                        <a href="#Oal">OAL</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -77,7 +80,7 @@
 
         <div class="inicio__informacion">
             <h1>
-                Facultad De Ciencias Juridicas
+                Departamento de Ciencias Jurídicas
             </h1>
 
         </div>
@@ -103,13 +106,136 @@
                     </p>
 
                     <p class="bienvenida__texto3">
-                        - Decano Ciencias Juridicas
+                        -Lic. Aldo Cáder
                     </p>
 
                 </div>
             </div>
         </div>
     </div>
+
+    
+
+    <div class="historia__informacion">
+        <div class="historia_contenedor">
+            <div class="historia_titulo">
+                <h2>Historia</h2>
+            </div>
+            <div class="historia__linea">
+            </div>
+            <div class="historia__texto">
+                <p>Cuatro décadas de docencia jurídica 1984-2024
+                <p>
+
+                <p>Nos enorgullece anunciar que nuestra Licenciatura en Ciencias Jurídicas se encuentra celebrando su
+                    cuadragésimo aniversario. Hemos, durante 40 años, formado profesionales capaces de analizar,
+                    jurídicamente, la realidad salvadoreña y de proponer soluciones con sentido humano a las
+                    problemáticas de nuestra nación. Por lo que hemos cumplido con los objetivos establecidos por el
+                    Padre Ignacio Ellacuría al momento que se planteó abrir esta carrera en nuestra casa de estudios.
+                </p>
+
+                <p>Beatrice de Carrillo, difunta y ex catedrática del Departamento de Ciencias Jurídicas, fue una de las
+                    integrantes de la comisión que elaboró la primera propuesta del plan de estudios de la Licenciatura.
+                    En su momento ella manifestó que dicho proceso inició en 1982 y que la planificación de su apertura
+                    tomó al menos dos años para llevarse a cabo, “en 1982 fui llamada para trabajar en el proyecto.
+                    Fueron alrededor de dos años de planificaciones y encuentros”. Por lo que se reunió cada semana con
+                    el Padre Ellacuría, Segundo Montes, Nicolás Mariscal e Ítalo López Vallecillos.</p>
+
+                <p>Ella destacó que “en ese momento, el padre Ellacuría consideró que abrir la carrera era la mejor
+                    manera para influir en la realidad nacional desde la Universidad. El pensamiento que quería
+                    transmitir la UCA era transformar la sociedad salvadoreña para llevarla a la democratización a
+                    través de una formación diferente: crear en los alumnos una visión de país democrática e
+                    igualitaria”. Esto aún sigue vigente en nuestra realidad, pues buscamos que nuestros profesionales
+                    estén comprometidos con la igualdad de nuestros nacionales y que la democracia se profundice.</p>
+
+                <p>Después de varias evaluaciones y propuestas, en octubre de 1983 se aprobó el programa definitivo. Y
+                    en 1984 arrancó la carrera, adscrita al Departamento de Sociología y Ciencias Políticas, en la
+                    Facultad de Ciencias Económicas. Fue hasta 1987 que nació el Departamento de Ciencias Jurídicas, que
+                    pasó a formar parte de la Facultad de Ciencias Sociales y Humanidades en 1999.</p>
+
+                <p>A raíz de la publicación de la Ley de Educación Superior, en 1997 se llevó a cabo la primera
+                    actualización del plan de estudios, en la cual se decidió reducir el número de materias de 50 a 40.
+                    Según Manuel Escalante, difunto y ex director de la carrera, “lo que se logró con ese cambio fue
+                    consolidar el conocimiento y concentrar la esencia de la educación en derecho”.</p>
+
+                <p>Posteriormente, en 2003 y en 2009 se hicieron sendas actualizaciones del plan de estudios, con el fin
+                    de cambiar el orden de las asignaturas y definir cuatro áreas académicas: derecho público, derecho
+                    privado, derecho social y derecho internacional. Ahora en día, con nuestro último plan de estudios
+                    2019-2023, hemos consolidado 8 áreas de formación académica: Introductoria, Derecho Público, Derecho
+                    Privado, Derecho Social, Derecho Internacional, Reflexión e Incidencia Sociojurídica, Optativas
+                    Técnicas y Optativas Humanístico Social.</p>
+
+                <p>Además, actualmente nos encontramos en proceso de aprobación de nuestro nuevo plan de estudios que
+                    esperamos inicie su vigencia a partir del año 2025.</p>
+
+                <p>El plan de estudios vigente comprende 42 asignaturas: 37 prescritas, 2 Optativa Humanístico-Social y
+                    3 Optativas Técnicas de Derecho. Los primeros dos años de la carrera poseen tanto horario matutino
+                    como nocturno. A partir del tercer año de la carrera solo contamos con horarios nocturnos.</p>
+
+                <p>En cuatro décadas, la UCA ha entregado un total de 3,405 títulos de Licenciatura en Ciencias
+                    Jurídicas. También hemos contado con excelentes gestores del talento humano de nuestro Departamento,
+                    es decir, apoyo de Jefaturas, entre los cuales podemos mencionar los siguientes: Segundo Montes Mozo
+                    (1984-1985), Roberto Lara Velado (1985-1987), Beatrice Alamanni de Carrillo (1987-1990), Enrique
+                    Argumedo (1991-1994), Ivo Priamo Alvarenga (1995), Emma Dinorah Bonilla de Avelar (1995-2001),
+                    Francisco Salvador Fonseca (2001-2011), Karla Peña Martell (2011-2023), y Aldo Enrique Cáder Camilot
+                    (2024-).</p>
+
+                <p>Por otra parte, la carrera ha contado con el apoyo de 17 Directores de Carrera, entre ellos: Beatrice
+                    de Carrillo (1984-1991), Orlando Baños Pacheco (1991-1994), Emma Dinora de Avelar (1995), Elizabeth
+                    Cubías (1995-1996), María García Cachafeiro (1997-1998), Otilio Miranda (1998-2001), Carlos Emilio
+                    Gómez (2001-2002), Elsa Cañada de Melgar (2002-2004), Karla Peña Martell (2004-2008), Manuel
+                    Escalante (2008-2009), José Ismael Martínez (2009-2010), José Antonio Villalobos (2010-2012), Raúl
+                    González (2012-2014), Manuel Escalante (2014-2016), Ingrid Gómez (2018-2020), Gabriela Santos
+                    (2021-2022), y José Erick Chávez Marín (2022-).</p>
+
+                <p>Además, el Departamento de Ciencias Jurídicas también tiene una amplia y creciente gama de Maestrías
+                    que desarrollan múltiples aspectos del quehacer profesional salvadoreño. Actualmente contamos con:
+                    Maestría en Derecho Empresarial dirigida por la Mtra. Ingrid Gómez, Maestría en Administración
+                    Pública dirigida por el Mtro. Antonio Morales, y Maestría en Criminología y Políticas de Prevención
+                    dirigida por el Dr. Augusto López.</p>
+
+                <p>Por último, desde el año 2014 se logró rehabilitar nuestro centro de práctica jurídica, la Oficina de
+                    Asistencia Legal (OAL) en el año 2014. Dicha reapertura ha contado con dos directores: Lic. Juan
+                    Pablo Ramos Orellana (2014-2019) y Lic. Israel Antonio Chinchilla Sánchez (2019-).</p>
+
+                <p>La OAL ha contado con 374 alumnos inscritos de los cuales 302 han sido acreditados y 72 se retiraron
+                    de la práctica.</p>
+
+                <p>Todos nuestros/as profesores/as, personal administrativo, etc. han sido clave esencial para que
+                    nuestra carrera haya tenido un crecimiento exponencial con los años y que esto siga así en la
+                    actualidad. Por lo que orgullosamente podemos manifestar que en la actualidad contamos con más de
+                    seiscientos estudiantes inscritos y activos en el año 2024.</p>
+
+                <p>Esperamos continuar creciendo y aportando al análisis crítico de nuestra realidad nacional con
+                    nuestra Licenciatura en Ciencias Jurídicas de la Universidad Centroamericana José Simeón Cañas.</p>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="animacion">
+
+    
+    <div class="linea__separadora"></div>
+    <div class="estructura_ciencias">
+
+
+        <div class="historia_titulo">
+            <h2>Estructura del departamento de Ciencias Juridicas</h2>
+        </div>
+
+
+        <div>
+            <div>
+                <img class="organigrama__imagen" src="img/organigrama.png" alt="ImagenOrganigrama">
+            </div>
+        </div>
+
+    </div>
+
+</div>
+
 
 
 
@@ -134,9 +260,10 @@
                     </p>
 
                     <p class="bienvenida__texto2">
-                        Del 04 de junio al 11 de julio de 2024 <br>
+                        <br>
                         🕓 Clases sincrónicas los días martes y jueves de 6:00 a 8:30 p.m.<br>
-                        💵 Inversión: Pago único de $250.00 o dos cuotas de $125.00. 10% de descuento disponible en
+                        💵 Inversión: Pago único de $250.00 o dos cuotas de $125.00. 10% de descuento disponible
+                        en
                         modalidad de pago
                         único para estudiantes y graduados UCA y grupos institucionales.<br>
                         📆 Fecha límite de inscripción: martes 28 de mayo 2024
@@ -180,16 +307,25 @@
                     <p class="bienvenida__texto2">
                         Nos emociona compartir que este día 29/04/2024 se dio lugar a la sesión presencial
                         extraordinaria titulada
-                        "Siete décadas protegiendo a las personas refugiadas: Reflexiones actuales sobre la protección
-                        internacional, los desafíos climáticos y las oportunidades para poner fin a la apatridia". <br>
+                        "Siete décadas protegiendo a las personas refugiadas: Reflexiones actuales sobre la
+                        protección
+                        internacional, los desafíos climáticos y las oportunidades para poner fin a la
+                        apatridia".
+                        <br>
                         <br>
 
-                        Este evento fue organizado por la Agencia de la ONU para los Refugiados (ACNUR) como parte del
-                        Diplomado en Derecho Migratorio, en colaboración con el Departamento de Ciencias Jurídicas UCA
+                        Este evento fue organizado por la Agencia de la ONU para los Refugiados (ACNUR) como
+                        parte
+                        del
+                        Diplomado en Derecho Migratorio, en colaboración con el Departamento de Ciencias
+                        Jurídicas
+                        UCA
                         El Salvador. <br> <br>
 
-                        La sesión fue inaugurada por el jefe del Departamento de Ciencias Jurídicas, Lic. Aldo Cáder,
-                        quien ofreció unas palabras de agradecimiento en nombre de la universidad. Acto seguido, se
+                        La sesión fue inaugurada por el jefe del Departamento de Ciencias Jurídicas, Lic. Aldo
+                        Cáder,
+                        quien ofreció unas palabras de agradecimiento en nombre de la universidad. Acto seguido,
+                        se
                         dieron inicio a las ponencias magistrales a cargo de destacados expertos en el tema.
                     </p>
                 </div>
@@ -235,44 +371,6 @@
 
         </div>
 
-        <div class="animacion">
-
-
-            <div class="linea__separadora__blanca"></div>
-
-            <div class="radio_informacion">
-
-
-
-                <div class="radio_titulo">
-                    <h2>
-                        Nuestras Redes Sociales
-                    </h2>
-                </div>
-
-                <div class="bienvenida_informacion_radio">
-                    <div class="texto">
-                        <p class="radio__texto">
-                            Programa: Venta Juridica YSUCA 91.7 FM
-                        </p>
-
-                        <p class="radio__texto2">
-                            Horario del programa radial Lunes de 7:00PM a 8:00 PM
-                        </p>
-
-                        <p class="radio__texto2">
-                            Programa conducido por Henry Campos,
-                            Profesor de Ciencias Juridicas de la UCA
-                        </p>
-
-                    </div>
-                    <img class="bienvenida_imagen" src="Img/programaRadio.jpg" alt="Imagen" width="100%">
-                </div>
-            </div>
-
-        </div>
-
-    </div>
 
     </div>
 
