add: "Organigrama and perfiles personales"

--- a/paginaHtml.html
+++ b/paginaHtml.html
@@ -42,6 +42,9 @@
                         <div class="dropdown-content">
                             <ul>
                                 <li>
+                                    <a href="#bienvenida">Bienvenida</a>
+                                </li>
+                                <li>
                                     <a href="#historia">Historia</a>
                                 </li>
                                 <li>
@@ -62,7 +65,7 @@
                         <a href="#maestrias">Maestrías</a>
                     </li>
                     <li>
-                        <a href="#investigacion-proyectos">Proyectos</a>
+                        <a href="#investigacion-proyectos">Eventos</a>
                     </li>
                     <li>
                         <a href="#programa-radio">Programa de Radio</a>
@@ -92,7 +95,7 @@
         <div class="texto">
 
             <div class="bienvenida_informacion">
-                <img class="bienvenida_imagen" src="Img/perfil.jpg" alt="Imagen" width="100%">
+                <img class="bienvenida_imagen" src="Img/aldo.png" alt="Imagen" width="100%">
                 <div class="texto">
 
                     <p class="bienvenida__texto">
@@ -114,7 +117,7 @@
         </div>
     </div>
 
-    
+
 
     <div class="historia__informacion">
         <div class="historia_contenedor">
@@ -215,27 +218,198 @@
     </div>
 
     <div class="animacion">
-
-    
-    <div class="linea__separadora"></div>
-    <div class="estructura_ciencias">
+        <div class="linea__separadora"></div>
 
 
-        <div class="historia_titulo">
-            <h2>Estructura del departamento de Ciencias Juridicas</h2>
-        </div>
+        <div class="estructura_ciencias">
 
 
-        <div>
-            <div>
-                <img class="organigrama__imagen" src="img/organigrama.png" alt="ImagenOrganigrama">
+            <div class="historia_titulo">
+                <h2>Estructura del departamento de Ciencias Juridicas</h2>
             </div>
+
+
+            <div>
+                <div>
+                    <img class="organigrama__imagen" src="img/organigrama.png" alt="ImagenOrganigrama">
+                </div>
+            </div>
+
         </div>
 
     </div>
 
-</div>
 
+    <div class="animacion">
+        <div class="linea__separadora"></div>
+
+
+        <div class="historia_titulo">
+            <h2>Perfiles Personales</h2>
+        </div>
+
+    </div>
+
+    <div class="main_card">
+        <div class="card">
+            <img src="Img/aldo.png">
+            <div class="card-content">
+                <h2>
+                    Lic. Aldo Cáder
+                </h2>
+                <p>
+                    Actualmente, Jefe del departamento de Ciencias Jurídicas de la UCA.
+                    Abogado y notario de la República.
+                    Licenciado en Ciencias Jurídicas por la UCA, con diplomado en Derecho Constitucional por la
+                    Universidad Carlos III de Madrid,
+                    Diplomado en Derecho de Competencia por la Escuela Iberoamericana de Derecho de Competencia, con
+                    sede en Madrid, España.
+
+
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Img/sandra.png">
+            <div class="card-content">
+                <h2>
+                    Sandra Santos
+                </h2>
+                <p>
+                    Catedrática Universitaria en las materias Derecho Constitucional, Derecho Procesal Constitucional,
+                    Derecho Procesal Civil en la Licenciatura de Ciencias Jurídicas, Derecho Constitucional Económico en
+                    la Maestría en Derecho Empresarial.
+
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="Img/gabriel.png">
+            <div class="card-content">
+                <h2>
+                    Gabriel Romero
+                </h2>
+                <p>
+                    Licenciado en Ciencias Jurídicas por la Universidad Centroamericana “José Simeón Cañas”.
+                    Máster en Historia del Mundo por la Universidad Pompeu Fabra
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Img/erick.png">
+            <div class="card-content">
+                <h2>
+                    Erick Chavez
+                </h2>
+                <p>
+                    Director de la Carrera de la Licenciatura en Ciencias Jurídicas y Profesor de Derecho Internacional
+                    Público, Derecho Comunitario de Centroamérica y co-supervisor de monografías de investigación en las
+                    Maestrías en Derecho Empresarial y Administración Pública en la Universidad Centroamericana José
+                    Simeón Cañas.
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Img/warland.png">
+            <div class="card-content">
+                <h2>
+                    Warland Ruiz
+                </h2>
+                <p>
+                    Docente Certificado en Educación Superior (2023)
+                    Licenciatura en Negocios Internacionales, UTEC (2022)
+                    Máster en Derecho Empresarial, Universidad de Valladolid, Reino de España (2002)
+                    Licenciatura en Ciencias Jurídicas UCA (2000)
+
+
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="Img/nofot.png">
+            <div class="card-content">
+                <h2>
+                    Ingrid Gómez
+                </h2>
+                <p>
+                    Académica e investigadora del Departamento de Ciencias Jurídicas.
+                    Graduada de la licenciatura en Ciencias Jurídicas, y Maestría en Derecho de Empresa por la UCA,
+                    ambos títulos con mención CUM LAUDE.
+                    Abogada y notaria, con especialización en el área de Derecho Privado.
+
+
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Img/agus.png">
+            <div class="card-content">
+                <h2>
+                    Augusto López
+                </h2>
+                <p>
+                    Sociólogo con maestría en didáctica y postgrado en gestión científica.
+                    Es doctor en ciencias sociales por la UCA-UDB y doctor en ciencias jurídicas y sociales por la
+                    Universidad de Málaga (España).
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="Img/jean.png">
+            <div class="card-content">
+                <h2>
+                    Jean Portillo
+                </h2>
+                <p>
+                    Licenciado en Ciencias Jurídicas y Sociales por la Universidad Dr. José Matías Delgado.
+                    Abogado y Notario de profesión en la actualidad.
+                    Trabajó durante más de 10 años en el Registro de Comercio del Centro Nacional de Registros.
+                </p>
+            </div>
+        </div>
+
+
+
+        <div class="card">
+            <img src="Img/abel.png">
+            <div class="card-content">
+                <h2>
+                    Abel Canales
+
+                </h2>
+                <p>
+                    Graduado en Ciencias Jurídicas con una maestría en Derecho Empresarial, obtenida con la distinción
+                    de mención honorífica CUM Laude de la Universidad Centroamericana José Simeón Cañas.
+                    Además, posee un Diplomado de Posgrado en Docencia Universitaria, también otorgado por la misma
+                    institución.
+
+                </p>
+            </div>
+        </div>
+
+
+        <div class="card">
+            <img src="Img/israel.png">
+            <div class="card-content">
+                <h2>
+                    Israel Chinchilla
+                </h2>
+                <p>
+                    Director de la Oficina de Asistencia Legal (en la actualidad),
+                    Director de la Maestría en Derecho de Empresa,
+                    Director de la Carrera de Ciencias Jurídicas. Cargos desempeñados para la Universidad
+                    Centroamericana José Simeón Cañas.
+                    También auxiliar del Fiscal General de la República.
+
+                </p>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -282,7 +456,6 @@
 
 
     <div class="animacion">
-
         <div class="linea__separadora"></div>
 
         <div class="eventos_titulo">
