--- a/paginaHtml.html
+++ b/paginaHtml.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+        <link rel="icon" type="image/png" href="Img/ucafav.jpg">
+
 
 </head>
 
@@ -50,6 +52,9 @@
                                 <li>
                                     <a href="#organigrama">Organigrama</a>
                                 </li>
+                                <li>
+                                    <a href="#perfiles">Perfiles</a>
+                                </li>
                             </ul>
                         </div>
                     </li>
@@ -62,22 +67,22 @@
                         <div class="dropdown-content">
                             <ul>
                                 <li>
-                                    <a href="#bienvenida">Maestrias</a>
+                                    <a href="#maestria">Maestrias</a>
                                 </li>
                             </ul>
                         </div>
                     </li>
                     <li>
-                        <a href="#diplomados-cursos">Diplomados y Cursos</a>
+                        <a href="#diplomadosycursos">Diplomados y Cursos</a>
                     </li>
                     <li>
-                        <a href="#investigacion-proyectos">Eventos</a>
+                        <a href="#eventos">Eventos</a>
                     </li>
                     <li>
-                        <a href="#programa-radio">Programa de Radio</a>
+                        <a href="#programaradio">Programa de Radio</a>
                     </li>
                     <li>
-                        <a href="#Oal">OAL</a>
+                        <a href="#oal">OAL</a>
                     </li>
                 </ul>
             </nav>
@@ -98,7 +103,7 @@
 
     <div class="animacion">
 
-        <div class="texto">
+        <div class="texto"  id="bienvenida">
 
             <div class="bienvenida_informacion">
                 <img class="bienvenida_imagen" src="Img/aldo.png" alt="Imagen" width="100%">
@@ -125,7 +130,7 @@
         </div>
     </div>
 
-    <div class="historia__imagen">
+    <div  id="historia" class="historia__imagen">
 
 
         <div class="historia_encabezado">
@@ -144,11 +149,10 @@
                 <h2>
                     Explora:
                 </h2>
-                <a href="#historia">Inicio del proyecto de planificación. </a>
-                <a href="#historia">Primera actualización del plan de estudios.</a>
-                <a href="#historia">Reapertura de la Oficina de Asistencia Legal (OAL).</a>
-                <a href="#historia"> Inicio del último plan de estudios.</a>
-
+                <a href="#historia1">Inicio del último plan de estudios.</a>
+                <a href="#historia2">Reapertura de la Oficina de Asistencia Legal (OAL).</a>
+                <a href="#historia3">Primera actualización del plan de estudios.</a>
+                <a href="#historia4">Inicio del proyecto de planificación. </a>
             </div>
 
 
@@ -183,7 +187,7 @@
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-date">2014 - 2019</div>
-                            <div class="timeline-content">
+                            <div class="timeline-content"id="historia2">
                                 <p>Por último, desde el año 2014 se logró rehabilitar nuestro centro de práctica
                                     jurídica, la
                                     Oficina de Asistencia Legal (OAL) en el año 2014. Dicha reapertura ha contado con
@@ -219,7 +223,7 @@
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-date">1983-1087</div>
-                            <div class="timeline-content">
+                            <div class="timeline-content" id="historia3">
 
                                 <p>Después de varias evaluaciones y propuestas, en octubre de 1983 se aprobó el programa
                                     definitivo. Y en 1984 arrancó la carrera, adscrita al Departamento de Sociología y
@@ -233,7 +237,7 @@
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-date">1982</div>
-                            <div class="timeline-content">
+                            <div class="timeline-content" id="historia4">
 
 
                                 <p>Beatrice de Carrillo, difunta y ex catedrática del Departamento de Ciencias
@@ -259,7 +263,7 @@
 
 
 
-                <div class="historia_padding">
+                <div class="historia_padding" id="historia1">
 
 
                     <p>Nos enorgullece anunciar que nuestra Licenciatura en Ciencias Jurídicas se encuentra
@@ -317,7 +321,7 @@
     </div>
 
 
-    <div class="imagenInicioOrganigrama">
+    <div class="imagenInicioOrganigrama"  id="organigrama">
 
         <div class="inicio__informacion">
             <h1>
@@ -355,7 +359,7 @@
         <div class="linea__separadora"></div>
 
 
-        <div class="eventos_titulo">
+        <div class="eventos_titulo"  id="perfiles">
             <h2>
                 Perfiles Personales
             </h2>
@@ -528,7 +532,7 @@
     <div class="animacion">
         <div class="linea__separadora"></div>
 
-        <div class="maestria_titulo">
+        <div class="maestria_titulo"  id="maestria">
             <h2>
                 Maestrias
             </h2>
@@ -576,7 +580,7 @@
     <div class="animacion">
         <div class="linea__separadora"></div>
 
-        <div class="maestria_titulo">
+        <div class="maestria_titulo"  id="diplomadosycursos">
             <h2>
                 Diplomados y Cursos
             </h2>
@@ -618,7 +622,7 @@
     <div class="animacion">
         <div class="linea__separadora"></div>
 
-        <div class="eventos_titulo">
+        <div class="eventos_titulo"  id="eventos">
             <h2>
                 Eventos
             </h2>
@@ -670,9 +674,9 @@
 
 
 
-                <div class="radio_titulo">
+                <div class="radio_titulo"  id="programaradio">
                     <h2>
-                        Radio
+                        Programa de Radio
                     </h2>
                 </div>
 
@@ -703,7 +707,7 @@
 
 
     <div class="animacion">
-        <div class="OAL__titulo">
+        <div class="OAL__titulo"  id="oal">
             <h2>
                 OAL (Oficina de Asistencia Legal)
             </h2>
@@ -843,7 +847,7 @@
             </a>
 
             <!-- Instagram Icon -->
-            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+            <a href="https://www.instagram.com/ccjj_uca/" target="_blank" aria-label="Instagram">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 24 24">
                     <path
                         d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.337 3.608 1.311.975.975 1.25 2.242 1.311 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.337 2.633-1.311 3.608-.975.975-2.242 1.25-3.608 1.311-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.337-3.608-1.311-.975-.975-1.25-2.242-1.311-3.608-.058-1.266-.07-1.646-.07-4.85s.012-3.584.07-4.85c.062-1.366.337-2.633 1.311-3.608.975-.975 2.242-1.25 3.608-1.311 1.266-.058 1.646-.07 4.85-.07zm0-2.163c-3.257 0-3.667.012-4.947.071-1.637.075-3.087.361-4.197 1.471-1.11 1.11-1.396 2.561-1.471 4.197-.059 1.28-.071 1.691-.071 4.947s.012 3.667.071 4.947c.075 1.637.361 3.087 1.471 4.197 1.11 1.11 2.561 1.396 4.197 1.471 1.28.059 1.691.071 4.947.071s3.667-.012 4.947-.071c1.637-.075 3.087-.361 4.197-1.471 1.11-1.11 1.396-2.561 1.471-4.197.059-1.28.071-1.691.071-4.947s-.012-3.667-.071-4.947c-.075-1.637-.361-3.087-1.471-4.197-1.11-1.11-2.561-1.396-4.197-1.471-1.28-.059-1.691-.071-4.947-.071zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162-2.759-6.162-6.162-6.162zm0 10.162c-2.205 0-4-1.795-4-4s1.795-4 4-4 4 1.795 4 4-1.795 4-4 4zm6.406-11.845c-.796 0-1.444-.648-1.444-1.444 0-.796.648-1.444 1.444-1.444.796 0 1.444.648 1.444 1.444 0 .796-.648 1.444-1.444 1.444z" />
