Add: Last changes

--- a/paginaHtml.html
+++ b/paginaHtml.html
@@ -569,17 +569,17 @@
 
                     <p class="bienvenida__texto2">
                         <br>
-                        🎓 La Maestría en Derecho Empresarial surge con el propósito de especializar profesionales del
-                        Derecho que adquieran las competencias y habilidades gerenciales, que permitan orientar y
-                        asesorar a las empresas en su actividad comercial, su relación con el Estado y los
-                        particulares.<br>
+                        🎓 La inseguridad en El Salvador existe de manera fehaciente. Este problema afecta especialmente
+                        a los grupos más excluidos y vulnerables. Conocer la realidad delictiva es necesario para
+                        explicar la criminalidad y la inseguridad, intervenir sobre ellas y evaluar las prácticas de
+                        intervención con rigurosidad analítica y evidencia. .<br>
                     </p>
 
                     <p class="bienvenida__texto3">
                         ✉️ maestria.criminologia@uca.edu.sv <br>
 
 
-                    <div class= "estilo_button button_izquierda">
+                    <div class="estilo_button button_izquierda">
                         <button
                             onclick="window.location.href='https://uca.edu.sv/postgrados/ciencias-sociales-y-humanidades/criminologia-y-politicas-de-prevencion/';">Leer
                             más</button>
@@ -601,9 +601,9 @@
 
             <div class="bienvenida_informacion">
                 <div>
-                    <img class="bienvenida_imagen" src="Img/maestria2.jpg" alt="Imagen" width="100%">
+                    <img class="bienvenida_imagen grid-item-1 " src="Img/maestria2.jpg" alt="Imagen" width="100%">
                 </div>
-                <div class="texto">
+                <div class="texto grid-item-2">
                     <p class="bienvenida__texto">
                         Maestría en Derecho Empresarial
                     </p>
@@ -631,7 +631,7 @@
             </div>
         </div>
     </div>
-        
+    <div class="animacion">
         <div class="texto">
 
             <div class="bienvenida_informacion_maestria">
@@ -644,16 +644,21 @@
 
                     <p class="bienvenida__texto2">
                         <br>
-                        🎓 La Maestría en Administración Pública tiene como finalidad incidir en la realidad a través de la formación especializada en Administración Pública. La profesionalización y democratización del área, la mejora en la calidad de servicios prestados y de políticas públicas enfocadas hacia los menos favorecidos, la disminución de la corrupción y subsecuente mejora de la transparencia y rendición de cuentas del Sector Público y la apertura a la participación ciudadana son los aspectos que esta maestría abordará.<br>
+                        🎓 La Maestría en Administración Pública tiene como finalidad incidir en la realidad a través de
+                        la formación especializada en Administración Pública. La profesionalización y democratización
+                        del área, la mejora en la calidad de servicios prestados y de políticas públicas enfocadas hacia
+                        los menos favorecidos, la disminución de la corrupción y subsecuente mejora de la transparencia
+                        y rendición de cuentas del Sector Público y la apertura a la participación ciudadana son los
+                        aspectos que esta maestría abordará.<br>
                     </p>
 
                     <p class="bienvenida__texto3">
                         ✉️ maestria.administracionpublica@uca.edu.sv <br>
 
 
-                    <div class= "estilo_button button_izquierda">
+                    <div class="estilo_button button_izquierda">
                         <button
-                            onclick="window.location.href='https://uca.edu.sv/postgrados/ciencias-sociales-y-humanidades/criminologia-y-politicas-de-prevencion/';">Leer
+                            onclick="window.location.href='https://uca.edu.sv/postgrados/ciencias-sociales-y-humanidades/administracion-publica/';">Leer
                             más</button>
                     </div>
                     </p>
@@ -664,7 +669,7 @@
             </div>
         </div>
 
-
+    </div>
 
 
     </div>
@@ -732,7 +737,7 @@
                 </div>
                 <div class="texto">
                     <p class="bienvenida__texto2">
-                        Nos emociona compartir que este día 29/04/2024 se dio lugar a la sesión presencial
+                        Nos emociona compartir que se dio lugar a la sesión presencial
                         extraordinaria titulada
                         "Siete décadas protegiendo a las personas refugiadas: Reflexiones actuales sobre la
                         protección
@@ -783,12 +788,15 @@
                         </p>
 
                         <p class="radio__texto2">
-                            Horario del programa radial Lunes de 7:00PM a 8:00 PM
+                            ⏰Horario del programa radial: Lunes de 7:00PM a 8:00PM
                         </p>
 
                         <p class="radio__texto2">
-                            Programa conducido por Henry Campos,
-                            Profesor de Ciencias Juridicas de la UCA
+                            📡 ¡Escúchanos en vivo en
+
+                            <a href="https://ysuca.org.sv" class="enlace-blanco">ysuca.org.sv</a>
+                            ¡Te esperamos!
+
                         </p>
 
                     </div>
@@ -858,7 +866,7 @@
                         <div class="org-box">Asistente</div>
                     </div>
                 </div>
-                
+
             </div>
         </section>
 
