Add: "Fix Gramatic"

--- a/paginaHtml.html
+++ b/paginaHtml.html
@@ -9,7 +9,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
-    <title>Ciencias Juridicas</title>
+    <title>Ciencias Jurídicas</title>
     <script src="https://kit.fontawesome.com/ffb957ae35.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -76,7 +76,7 @@
                                         </li>
 
                                         <li>
-                                            <a href="#maestria">Maestrias</a>
+                                            <a href="#maestria">Maestrías</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -203,25 +203,14 @@
                                     contamos con más de
                                     seiscientos estudiantes inscritos y activos en el año 2024.</p>
 
-                                <p>Esperamos continuar creciendo y aportando al análisis crítico de nuestra realidad
-                                    nacional con
-                                    nuestra Licenciatura en Ciencias Jurídicas de la Universidad Centroamericana José
-                                    Simeón Cañas.</p>
+                                <p>Esperamos continuar creciendo y aportando al análisis crítico de nuestra realidad nacional con nuestra Licenciatura en Ciencias Jurídicas de la Universidad Centroamericana José Simeón Cañas.</p>
                             </div>
                         </div>
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-date">2014 - 2019</div>
                             <div class="timeline-content" id="historia2">
-                                <p>Por último, desde el año 2014 se logró rehabilitar nuestro centro de práctica
-                                    jurídica, la
-                                    Oficina de Asistencia Legal (OAL) en el año 2014. Dicha reapertura ha contado con
-                                    dos
-                                    directores: el Lic. Juan Pablo Ramos Orellana (2014-2019) y actualmente se encuentra
-                                    dirigida por el Lic. Israel Antonio Chinchilla Sánchez (2019-). La OAL ha contado
-                                    con 374
-                                    alumnos inscritos de los cuales 302 han sido acreditados y 72 se retiraron de la
-                                    práctica.</p>
+                                <p>Desde el año 2014, se logró rehabilitar nuestro centro de práctica jurídica, la Oficina de Asistencia Legal (OAL). Dicha reapertura ha contado con dos directores: el Lic. Juan Pablo Ramos Orellana (2014-2019) y, actualmente, el Lic. Israel Antonio Chinchilla Sánchez (2019-presente). La OAL ha contado con 374 alumnos inscritos, de los cuales 302 han sido acreditados y 72 se retiraron de la práctica.</p>
                             </div>
                         </div>
                         <div class="timeline-item">
@@ -229,34 +218,17 @@
                             <div class="timeline-date">2003 - 2009</div>
                             <div class="timeline-content">
                                 <p>
-                                    Posteriormente, en 2003 y en 2009 se hicieron sendas actualizaciones del plan de
-                                    estudios,
-                                    con el fin de cambiar el orden de las asignaturas y definir cuatro áreas académicas:
-                                    derecho
-                                    público, derecho privado, derecho social y derecho internacional. Ahora en día, con
-                                    nuestro
-
-                                    último plan de estudios 2019-2023, hemos consolidado 8 áreas de formación académica:
-                                    Introductoria, Derecho Público, Derecho Privado, Derecho Social, Derecho
-                                    Internacional,
-                                    Reflexión e Incidencia Socio jurídica, Optativas Técnicas y Optativas Humanístico
-                                    Social.
+                                    Posteriormente, en 2003 y en 2009, se realizaron sendas actualizaciones del plan de estudios con el fin de reorganizar el orden de las asignaturas y definir cuatro áreas académicas: Derecho Público, Derecho Privado, Derecho Social y Derecho Internacional. Actualmente, con nuestro último plan de estudios (2019-2023), hemos consolidado ocho áreas de formación académica: Introductoria, Derecho Público, Derecho Privado, Derecho Social, Derecho Internacional, Reflexión e Incidencia Socio jurídica, Optativas Técnicas y Optativas Humanístico-Sociales.
                                 </p>
 
                             </div>
                         </div>
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
-                            <div class="timeline-date">1983-1087</div>
+                            <div class="timeline-date">1983-1999</div>
                             <div class="timeline-content" id="historia3">
 
-                                <p>Después de varias evaluaciones y propuestas, en octubre de 1983 se aprobó el programa
-                                    definitivo. Y en 1984 arrancó la carrera, adscrita al Departamento de Sociología y
-                                    Ciencias
-                                    Políticas, en la Facultad de Ciencias Económicas. Fue hasta 1987 que nació el
-                                    Departamento de Ciencias Jurídicas, que pasó a formar parte de la Facultad de
-                                    Ciencias
-                                    Sociales y Humanidades en 1999. </p>
+                                <p>Después de varias evaluaciones y propuestas, en octubre de 1983 se aprobó el programa definitivo. En 1984 inició la carrera, adscrita al Departamento de Sociología y Ciencias Políticas en la Facultad de Ciencias Económicas. Fue hasta 1987 que nació el Departamento de Ciencias Jurídicas, el cual pasó a formar parte de la Facultad de Ciencias Sociales y Humanidades en 1999. </p>
                             </div>
                         </div>
                         <div class="timeline-item">
@@ -265,19 +237,7 @@
                             <div class="timeline-content" id="historia4">
 
 
-                                <p>Beatrice de Carrillo, difunta y ex catedrática del Departamento de Ciencias
-                                    Jurídicas, fue
-                                    una de las integrantes de la comisión que elaboró la primera propuesta del plan de
-                                    estudios
-                                    de la Licenciatura. En su momento ella manifestó que dicho proceso inicio en 1982 y
-                                    que la
-                                    planificación de su apertura tomó al menos dos años para llevarse a cabo, “en 1982
-                                    fui
-                                    llamada para trabajar en el proyecto. Fueron alrededor de dos años de
-                                    planificaciones y
-                                    encuentros”. Por lo que se reunió cada semana con el Padre Ellacuría, Segundo
-                                    Montes,
-                                    Nicolás Mariscal e Ítalo López Vallecillos.
+                                <p>Beatrice de Carrillo, difunta y ex catedrática del Departamento de Ciencias Jurídicas, fue una de las integrantes de la comisión que elaboró la primera propuesta del plan de estudios de la Licenciatura. En su momento, ella manifestó que dicho proceso inició en 1982 y que la planificación de su apertura tomó al menos dos años en llevarse a cabo: 'En 1982 fui llamada para trabajar en el proyecto. Fueron alrededor de dos años de planificaciones y encuentros'. Por lo tanto, se reunió cada semana con el Padre Ellacuría, Segundo Montes, Nicolás Mariscal e Ítalo López Vallecillos.
                                 </p>
 
                             </div>
@@ -350,7 +310,7 @@
 
         <div class="inicio__informacion">
             <h1>
-                Estructura del departamento de Ciencias Juridicas
+                Estructura del departamento de Ciencias jurídicas
             </h1>
 
         </div>
@@ -749,7 +709,7 @@
                         "Siete décadas protegiendo a las personas refugiadas: Reflexiones actuales sobre la
                         protección
                         internacional, los desafíos climáticos y las oportunidades para poner fin a la
-                        apatridia".
+                        apátrida".
                         <br>
                         <br>
 
@@ -791,7 +751,7 @@
                 <div class="bienvenida_informacion_radio">
                     <div class="texto">
                         <p class="radio__texto">
-                            Programa: Venta Juridica YSUCA 91.7 FM
+                            Programa: Venta jurídica YSUCA 91.7 FM
                         </p>
 
                         <p class="radio__texto2">
@@ -934,7 +894,7 @@
         <p class="informacionFooter">
             depto.cienciasjuridicas@uca.edu.sv <br>
             Nombre de contacto: Claudia López<br>
-            Telefono 2210-6600 ext 300<br>
+            Teléfono 2210-6600 ext 300<br>
             Horario de atención de lunes a viernes de 8:00 a 12:00 y de 1:00 a 5:45 pm<br>
         </p>
 
